# fallout-ce-switch

./: CMakeLists.txt  CMakePresets.json  README.md  fallout1_nx.ini
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci-build.yml
src/: logger.cc
src/game/: art.cc  art.h  bmpdlog.cc  cache.cc  cache.h  editor.cc  game.cc  gdialog.cc  inventry.cc  loadsave.cc  loadsave.h  main.cc  mainmenu.cc  object.cc  scripts.cc
src/int/support/: intextra.cc
src/plib/db/: db.cc  db.h
src/plib/gnw/: diagnostics.cc  diagnostics.h  dxinput.cc  dxinput.h  input.cc  input.h  memory.cc  memory.h  mouse.cc  mouse.h  svga.cc  winmain.cc
